tests/purs/failing/AtPatternPrecedence.out
Error found:
in module [33mMain[0m
at tests/purs/failing/AtPatternPrecedence.purs:11:1 - 11:15 (line 11, column 1 - line 11, column 15)

  Argument list lengths differ in declaration [33moops[0m


See https://github.com/purescript/documentation/blob/master/errors/ArgListLengthsDiffer.md for more information,
or to contribute content related to this error.

